--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  
+    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image">
+    <link rel="preload" href="./assets/morocco-2000w.webp" as="image">
+    <link rel="preload" href="./assets/cappadocia-2000w.webp" as="image">
+    <link rel="preload" href="./assets/los-lances-2000w.webp" as="image">
+    <link rel="preload" href="./assets/yosemite-2000w.webp" as="image">
+    <link rel="preload" href="./assets/saint-antonien-2000w.webp" as="image">
     <title>React Skeleton</title>
   </head>
   <body>
