feat: add media queries for card slider controls

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="preload" href="./assets/los-lances-2000w.webp" as="image">
     <link rel="preload" href="./assets/yosemite-2000w.webp" as="image">
     <link rel="preload" href="./assets/saint-antonien-2000w.webp" as="image">
+    <link rel="preload" href="./assets/saint-antonien.webp" as="image">
     <title>React Skeleton</title>
   </head>
   <body>
