feat: add hamburger menu

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image">
+    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image">
+    <link rel="preload" href="./assets/japan-alps.webp" as="image">
     <link rel="preload" href="./assets/morocco-2000w.webp" as="image">
+    <link rel="preload" href="./assets/morocco.webp" as="image">
     <link rel="preload" href="./assets/cappadocia-2000w.webp" as="image">
+    <link rel="preload" href="./assets/cappadocia.webp" as="image">
     <link rel="preload" href="./assets/los-lances-2000w.webp" as="image">
+    <link rel="preload" href="./assets/los-lances.webp" as="image">
     <link rel="preload" href="./assets/yosemite-2000w.webp" as="image">
+    <link rel="preload" href="./assets/yosemite.webp" as="image">
     <link rel="preload" href="./assets/saint-antonien-2000w.webp" as="image">
     <link rel="preload" href="./assets/saint-antonien.webp" as="image">
     <title>React Skeleton</title>
