fix: mobile nav menu items are overflowing on smaller screens

--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image">
-    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image">
-    <link rel="preload" href="./assets/japan-alps.webp" as="image">
-    <link rel="preload" href="./assets/morocco-2000w.webp" as="image">
-    <link rel="preload" href="./assets/morocco.webp" as="image">
-    <link rel="preload" href="./assets/cappadocia-2000w.webp" as="image">
-    <link rel="preload" href="./assets/cappadocia.webp" as="image">
-    <link rel="preload" href="./assets/los-lances-2000w.webp" as="image">
-    <link rel="preload" href="./assets/los-lances.webp" as="image">
-    <link rel="preload" href="./assets/yosemite-2000w.webp" as="image">
-    <link rel="preload" href="./assets/yosemite.webp" as="image">
-    <link rel="preload" href="./assets/saint-antonien-2000w.webp" as="image">
-    <link rel="preload" href="./assets/saint-antonien.webp" as="image">
-    <title>React Skeleton</title>
+    <meta name="description" content="Travel agency portfolio project" />
+
+    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/japan-alps-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/japan-alps.webp" as="image" />
+    <link rel="preload" href="./assets/morocco-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/morocco.webp" as="image" />
+    <link rel="preload" href="./assets/cappadocia-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/cappadocia.webp" as="image" />
+    <link rel="preload" href="./assets/los-lances-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/los-lances.webp" as="image" />
+    <link rel="preload" href="./assets/yosemite-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/yosemite.webp" as="image" />
+    <link rel="preload" href="./assets/saint-antonien-2000w.webp" as="image" />
+    <link rel="preload" href="./assets/saint-antonien.webp" as="image" />
+    <title>Globe Express</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
